--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "mge",
   "version": "1.0.0",
   "description": "",
-  "homepage": "yakov29.github.io/mge",
+  "homepage": "https://yakov29.github.io/mge",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel src/index.html",
-    "build": "parcel build src/index.html",
+    "build": "parcel build src/*/.html",
     "deploy": "gh-pages -d dist",
     "predeploy": "npm run build"
   },
