--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://yakov29.github.io/mge",
   "scripts": {
     "start": "parcel src/index.html",
-    "build": "parcel build src/*/.html",
+    "build": "parcel build src/*.html",
     "deploy": "gh-pages -d dist",
     "predeploy": "npm run build"
   },
