--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "axios": "^1.7.2",
     "gh-pages": "^6.1.1",
-    "json-server": "^1.0.0-beta.1"
+    "json-server": "^1.0.0-beta.1",
+    "npm": "^10.8.2",
+    "start": "^5.1.0"
   }
 }
